--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "@craco/craco": "6.4.5",
     "@emotion/react": "11.10.4",
+    "@emotion/styled": "11.10.4",
     "@loadable/component": "5.15.2",
     "@mantine/core": "5.5.5",
     "@mantine/hooks": "5.5.5",
+    "@tabler/icons": "1.105.0",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "13.5.0",
@@ -48,6 +50,7 @@
   },
   "devDependencies": {
     "@types/loadable__component": "5.13.4",
-    "craco-alias": "3.0.1"
+    "craco-alias": "3.0.1",
+    "eslint-plugin-react-hooks": "4.6.0"
   }
 }
