--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mantine/core": "5.5.5",
     "@mantine/hooks": "5.5.5",
     "@tabler/icons": "1.105.0",
+    "@tanstack/react-query": "4.12.0",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "13.5.0",
@@ -17,6 +18,7 @@
     "@types/node": "16.11.66",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "axios": "1.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "6.4.2",
